@@ -1,3 +1,7 @@
+9 January 2017: Wouter
+	- Fix #1202: Fix code comment that packed_rrset_data is not always
+	  'packed'.
+
 6 January 2017: Wouter
 	- Fix #1201: Fix missing unlock in answer_from_cache error condition.
 
